# terraform-lambda-pkg

./: .gitignore  README.md
python/: lambda_handler.py  pyproject.toml  requirements.txt
terraform/environments/dev/: .gitignore  build_lambda_layer.sh  main.tf
terraform/modules/lambda/: main.tf
test/: invoke.sh  output.txt  py310.txt  py310_sdkpandas.txt  py311.txt  py311_powertools.txt  py311_sdkpandas.txt  py312.txt  py312_powertools.txt  py312_sdkpandas.txt  py37.txt  py37_powertools.txt  py37_scipy.txt  py37_sdkpandas.txt  py38.txt  py38_scipy.txt  py38_sdkpandas.txt  py39.txt  py39_sdkpandas.txt
