[tool.poetry]
name = "terraform-lambda-pkg"
version = "0.1.0"
description = ""
authors = ["unknown <example@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
setuptools = "^69.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
